# mac

./: .gitignore  CMakeLists.txt
project/: Makefile  proj-main.c  project-conf.h
project/hash/: Makefile  hash_sim.csc  project-conf.h  sensor.c  sink.c
